# solar-panel-degradation

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: default_scenario.json  geo_scenario.json  iss_scenario.json  panel_technologies.json  sso_scenario.json
docs/: user_guide.md
examples/: basic_scenario.py  basic_usage_example.py  scenario_comparison_example.py
frontend/: index.html
frontend/js/: app.js
frontend/styles/: main.css
src/: __init__.py  main.py
src/api/: __init__.py  server.py
src/config/: __init__.py  data_formats.py  scenario_config.py
src/data/: __init__.py
src/degradation/: __init__.py  lifetime_model.py  power_calculator.py
src/orbital/: __init__.py  eclipse_calculator.py  orbit_propagator.py
src/radiation/: __init__.py  damage_model.py  radiation_environment.py
src/thermal/: __init__.py  thermal_analysis.py  thermal_degradation.py
src/visualization/: __init__.py  data_export.py  interactive_plots.py  pdf_reports.py
tests/: test_basic.py  test_basic_functionality.py
