[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-panel-degradation"
version = "1.0.0"
description = "User-friendly solar panel degradation modeling for space applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Solar Panel Degradation Team", email = "contact@solarpanelmodel.com"}
]
keywords = ["solar panel", "degradation", "space", "radiation", "thermal", "orbit", "satellite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "Flask>=2.0.0",
    "Flask-CORS>=3.0.0",
    "plotly>=5.0.0",
    "openpyxl>=3.0.0",
    "pydantic>=1.8.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
pdf = [
    "reportlab>=3.6.0",
    "weasyprint>=54.0",
]
orbital = [
    "sgp4>=2.19",
    "skyfield>=1.39",
]
full = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "reportlab>=3.6.0",
    "weasyprint>=54.0",
    "sgp4>=2.19",
    "skyfield>=1.39",
]

[project.urls]
Homepage = "https://github.com/ezra-compyle/solar-panel-degradation"
Repository = "https://github.com/ezra-compyle/solar-panel-degradation"
Documentation = "https://solarpaneldegradation.readthedocs.io/"
"Bug Reports" = "https://github.com/ezra-compyle/solar-panel-degradation/issues"

[project.scripts]
solar-panel-api = "src.api.server:run_server"
solar-panel-model = "src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]
"config" = ["*.json"]
"frontend" = ["**/*.html", "**/*.css", "**/*.js"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sgp4.*",
    "skyfield.*",
    "plotly.*",
    "reportlab.*",
    "weasyprint.*",
]
ignore_missing_imports = true